// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Action Output Tests Action Full Rendering 1`] = `
<ActionOutput
  contextId="ec123"
  id="actionOutput1"
  output={
    [
      {
        "content": "Lorem ipsum dolor sit amet",
        "type": 0,
      },
    ]
  }
  showIndexes={true}
>
  <div
    className="msg actionOutput"
    onPointerDown={[Function]}
    onPointerMove={[Function]}
    onPointerUp={[Function]}
    style={
      {
        "display": "flex",
        "flexDirection": "column",
        "gap": "2px",
      }
    }
  >
    <Button
      className="copyButton"
      data-tooltip="Copy result to clipboard"
      focusOnClick={false}
      imageOnly={true}
      onPointerDown={[Function]}
      tabIndex={-1}
    >
      <button
        className="msg button imageOnly copyButton"
        data-tooltip="Copy result to clipboard"
        onMouseDown={[Function]}
        onPointerDown={[Function]}
        style={
          {
            "flexDirection": undefined,
          }
        }
        tabIndex={-1}
      >
        <Icon
          data-tooltip="inherit"
          disabled={false}
          src={65}
        >
          <span
            className="msg icon codicon codicon-copy"
            data-tooltip="inherit"
          />
        </Icon>
      </button>
    </Button>
    <div
      style={
        {
          "display": "flex",
          "flexDirection": "row",
          "gap": "2px",
        }
      }
    >
      <Label
        caption="Lorem ipsum dolor sit amet"
        className="actionLabel"
        language="ansi"
        onClick={[Function]}
        style={
          {
            "gridColumn": "span 2",
          }
        }
        tabIndex={-1}
        type={0}
      >
        <label
          className="msg resultText error actionLabel"
          data-tooltip="expand"
          language="ansi"
          onClick={[Function]}
          style={
            {
              "gridColumn": "span 2",
            }
          }
          tabIndex={-1}
          type={0}
        >
          <span
            className=""
            style={
              {
                "backgroundColor": undefined,
                "color": undefined,
              }
            }
          >
            Lorem ipsum dolor sit amet
          </span>
        </label>
      </Label>
    </div>
  </div>
</ActionOutput>
`;

exports[`Action Output Tests Action Full Rendering 2`] = `
HTMLCollection [
  <button
    class="msg button imageOnly copyButton"
    data-tooltip="Copy result to clipboard"
    tabindex="-1"
  >
    <span
      class="msg icon codicon codicon-copy"
      data-tooltip="inherit"
    />
  </button>,
  <span
    class="msg icon codicon codicon-copy"
    data-tooltip="inherit"
  />,
  <label
    class="msg resultText response actionLabel"
    data-tooltip="expand"
    language="ansi"
    style="grid-column: span 2;"
    tabindex="-1"
    type="4"
  >
    <span
      class=""
    >
      A simple response
    </span>
  </label>,
]
`;

exports[`Action Output Tests Standard Rendering 1`] = `
<ActionOutput
  contextId="ec123"
  output={[]}
  showIndexes={false}
>
  <div
    className="msg actionOutput"
    onPointerDown={[Function]}
    onPointerMove={[Function]}
    onPointerUp={[Function]}
    style={
      {
        "display": "flex",
        "flexDirection": "column",
        "gap": "2px",
      }
    }
  >
    <Button
      className="copyButton"
      data-tooltip="Copy result to clipboard"
      focusOnClick={false}
      imageOnly={true}
      onPointerDown={[Function]}
      tabIndex={-1}
    >
      <button
        className="msg button imageOnly copyButton"
        data-tooltip="Copy result to clipboard"
        onMouseDown={[Function]}
        onPointerDown={[Function]}
        style={
          {
            "flexDirection": undefined,
          }
        }
        tabIndex={-1}
      >
        <Icon
          data-tooltip="inherit"
          disabled={false}
          src={65}
        >
          <span
            className="msg icon codicon codicon-copy"
            data-tooltip="inherit"
          />
        </Icon>
      </button>
    </Button>
  </div>
</ActionOutput>
`;
